...
                    shape: RoundedRectangleBorder(
                      borderRadius: BorderRadius.circular(14),
                    ),
                    elevation: 4,
                  ),
                  child: const Text(
                    "Mulai Sekarang",
                    style: TextStyle(
                      color: Color(0xFF3C6EEF),
                      fontSize: 17,
                      fontWeight: FontWeight.bold,
                    ),
                  ),
...
